ERMS-4912: fixing the problem with not visible tooltips on Submenue (Tabs)

--- a/grails-app/assets/themes/accessibility/semantic.css
+++ b/grails-app/assets/themes/accessibility/semantic.css
@@ -55742,6 +55742,12 @@ Floated Menu / Item
          Theme Overrides
 *******************************/
 
+/* Disabled */
+
+.ui.ui.menu .item.disabled {
+  pointer-events: auto;
+}
+
 .ui.menu .item.la-logo-item {
   padding-left: 0;
 }
@@ -71258,7 +71264,8 @@ select.ui.dropdown {
 
 .ui.disabled.dropdown,
 .ui.dropdown .menu > .disabled.item {
-  pointer-events: auto!important;
+  pointer-events: auto;
+  cursor: help;
 }
 
 .la-small-dropdown {
