--- a/grails-app/assets/themes/laser/semantic.css
+++ b/grails-app/assets/themes/laser/semantic.css
@@ -55605,6 +55605,13 @@ Floated Menu / Item
          Theme Overrides
 *******************************/
 
+/* Disabled */
+
+.ui.ui.menu .item.disabled {
+  pointer-events: auto;
+  cursor: help;
+}
+
 .ui.menu .item.la-logo-item {
   padding-left: 0;
 }
@@ -71164,7 +71171,8 @@ select.ui.dropdown {
 
 .ui.disabled.dropdown,
 .ui.dropdown .menu > .disabled.item {
-  pointer-events: auto!important;
+  pointer-events: auto;
+  cursor: help;
 }
 
 .la-small-dropdown {
